additional_styles.css
html,
body {
    width: 100%;
    height: 100rem;
    margin: 0;
    padding: 0;
}

.container {
    width: 100%;
    height: auto;
    display: grid;
    grid-template-columns: 4fr 2fr;
}

.ml-3 {
    margin-left: 3rem;
}

.grid-1-1 {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.mt-3 {
    margin-top: 1rem;
}

.text-small {
    font-size: .8rem;
    color: silver;
}

.text-large {
    font-size: 1.0rem;
    color: black;
}

.r-rev {
    display: flex;
    flex-direction: row-reverse;
    color: white;
}

section {
    display: grid;
    grid-template-columns: 1fr;
}

main {
    height: auto;
    display: block;
}

aside {
    height: auto;
}

.img-thumbnail {
    min-height: 6rem;
    min-width: 90%;
}

video {
    border: 1px solid white;
    height: 26rem;
    box-sizing: border-box;
}

.align-center {
    width: 90%;
    align-content: center;
    margin-left: 5%;
    box-sizing: border-box;
}

.video-section {
    height: 30rem;
    width: 90%;
    align-content: center;
    margin-left: 5%;
    box-sizing: border-box;
}

.views_socials {
    width: 90%;
    align-content: center;
    box-sizing: border-box;
    margin-left: 5%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin-bottom: 1%;
}

.social {
    display: flex;
    flex-direction: row-reverse;
}

.social a {
    margin-left: 1rem;
    margin-right: 1rem;
}

.vid-width {
    width: 100%;
}

.subscribe {
    width: 90%;
    height: 9rem;
    border: 1px solid white;
    box-sizing: border-box;
    display: grid;
    grid-template-columns: 1fr 9fr;
}

.row1 {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

p {
    color: black;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 400;
}

.pos-right {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
}

.img-rounded {
    height: 4rem;
    width: 4rem;
    border-radius: 50%;
    margin-top: 0;
}

.img-rounded-profile {
    height: 2rem;
    width: 2rem;
    border-radius: 50%;
}

.td-none {
    text-decoration: none;
}

.c-silver {
    color: silver;
}

.mt-1 {
    margin-top: 1rem;
}

hr {
    width: 90%;
    height: 1px;
}

@media only screen and (max-width: 765px) {
    .container {
        display: grid;
        grid-template-columns: 1fr;
    }
    main {
        width: 100%;
        height: auto;
    }
    aside {
        width: 90%;
        height: 80rem;
        margin-left: 5%;
    }
    .text-silver {
        color: gray;
    }
    .text-dark {
        color: black;
    }
    .sm-hide {
        display: none;
    }
    .hide {
        display: none;
    }
    .pos-right {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
        grid-gap: 1rem;
    }
    footer {
        margin-bottom: 0;
    }
}

article {
    height: 8rem;
    width: 100%;
}

figure {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 1rem;
}

img {
    height: 6rem;
    border: 1px solid white;
}

figcaption {
    box-sizing: border-box;
    height: 6rem;
}

.text-silver {
    display: block;
    color: silver;
    font-size: 1rem;
}

.text-dark {
    color: black;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 0.9rem;
}

.center-align {
    width: 90%;
    align-content: center;
    box-sizing: border-box;
    margin-left: 5%;
    margin-bottom: 1%;
}

.comments {
    display: grid;
    grid-template-columns: 1fr 2fr;
}

.red-but-sm {
    background: #D10918;
    border-radius: 3px;
    border: 0;
    padding: 5px;
    width: 50%;
}

.enter-comments {
    width: 90%;
    margin-left: 5%;
    height: 4rem;
    display: grid;
    grid-template-columns: 1fr 5fr;
}

input[name="message"] {
    height: 2rem;
}

a {
    color: silver;
    text-decoration: none;
}

.more-comments {}

.grid-1-8 {
    display: grid;
    grid-template-columns: 1fr 8fr;
}

.grid-1 {
    display: grid;
    grid-template-columns: 1fr;
}

